--- a/session1/Kong plugin Fundamentals/Example Plugin Usage/Request termination/docker-compose.yml
+++ b/session1/Kong plugin Fundamentals/Example Plugin Usage/Request termination/docker-compose.yml
@@ -22,11 +22,7 @@ services:
     image: kong/kong-gateway:${KONG_VERSION:-latest}
     container_name: kong
     restart: always
-    extra_hosts:
-      - "auth-service:172.27.0.1"
-    # network_mode: host
     environment:
-      - ECHO_SERVER=http://${DOCKER_GATEWAY_HOST:-host.docker.internal}:8090
       - TZ=${TZ:-Asia/Kolkata}
       - KONG_DATABASE=postgres
       - KONG_PG_HOST=${KONG_PG_HOST:-kong-database}
@@ -48,8 +44,8 @@ services:
       - KONG_LICENSE_DATA=${KONG_LICENSE_DATA}
       - KONG_LOG_LEVEL=info
       - KONG_WORKER_STATE_UPDATE_FREQUENCY=1
-      - KONG_LUA_PACKAGE_PATH=./opt/conf/?.lua;
-      - KONG_PLUGINS=bundled,myplugin
+      - KONG_LUA_PACKAGE_PATH=/opt/conf/?.lua;
+      - KONG_PLUGINS=bundled
     ports:
       - 8000:8000
       - 8001:8001
@@ -59,12 +55,6 @@ services:
       - 8443:8443
       - 8444:8444
       - 8445:8445
-    volumes:
-      - ./kong-plugin:/opt/conf/
-    working_dir: /opt/conf
-    command: sh -c "luarocks make --local && kong start -vv"
-    #command: /opt/conf/build.sh
-    #command: tail -f /dev/null
     healthcheck:
       test: ["CMD", "kong", "health"]
       interval: 1s
