--- a/session1/Kong plugin Fundamentals/Example Plugin Usage/Request transformer/docker-compose.yml
+++ b/session1/Kong plugin Fundamentals/Example Plugin Usage/Request transformer/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       - POSTGRES_DB=${POSTGRES_DB:-kong}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD:-kong}
     volumes:
-      - ./pg_data:/var/lib/postgresql/data
+      - pg_data:/var/lib/postgresql/data
     restart: always
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres"]
@@ -60,3 +60,6 @@ services:
       interval: 1s
       timeout: 4s
       retries: 5
+
+volumes:
+  pg_data:
