--- a/session1/Plugin Development Intro/Plugin Configuration Overview/docker-compose.yml
+++ b/session1/Plugin Development Intro/Plugin Configuration Overview/docker-compose.yml
@@ -45,7 +45,11 @@ services:
       - KONG_LOG_LEVEL=info
       - KONG_WORKER_STATE_UPDATE_FREQUENCY=1
       - KONG_LUA_PACKAGE_PATH=/opt/conf/?.lua;
-      - KONG_PLUGINS=bundled
+      - KONG_PLUGINS=bundled,myplugin
+    volumes:
+      - ./kong-plugin:/opt/conf/
+    working_dir: /opt/conf
+    command: sh -c "luarocks make --local && kong start -vv"
     ports:
       - 8000:8000
       - 8001:8001
