--- a/session1/example-plugin-usage/request-transformer/.env
+++ b/session1/example-plugin-usage/request-transformer/.env
@@ -1,12 +1,12 @@
 # KONG
-KONG_VERSION=2.3.3.2-alpine
+KONG_VERSION=3.4.3.12-ubuntu
 KONG_ADMIN_LISTEN=0.0.0.0:8001
 KONG_PROXY_LISTEN=0.0.0.0:8000, 0.0.0.0:8443 ssl http2
-KONG_NGINX_HTTP_RESOLVER=1.1.1.1
-KONG_LICENSE_DATA={license: JSON_YOU_RECEIVED}
+KONG_LICENSE_DATA=$KONG_LICENSE_DATA
+ADMIN_USER_PASSWORD=kong
 
 # Database
-POSTGRES_VERSION=13-alpine
+POSTGRES_VERSION=15-alpine
 POSTGRES_USER=kong
 POSTGRES_PASSWORD=kong
 POSTGRES_DB=kong
