--- a/session3/security/solution/docker-compose-auth-service.yml
+++ b/session3/security/solution/docker-compose-auth-service.yml
@@ -1,17 +1,15 @@
-version: "3.7"
-
 services:
   auth-service:
     image: auth-service
     build:
       context: ./auth-service
     networks:
-      - kong_network
+      - kong-training
     environment:
       - TOKENS=token1,token2,token3
       - CUSTOMERS=customer1,customer2,customer3
     ports:
       - 3000:3000
-# networks:
-#   security_kong_network:
-#     external: true
+
+networks:
+  kong-training:
