remove .DS_Store

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@ session1/plugin-development-intro/plugin-request-phases-overview/kong-plugin/.po
 session1/plugin-development-intro/plugin-configuration-overview/.DS_Store
 session1/external-authentication-demo/solution/kong-plugin/.pongo/.bash_history
 session1/plugin-development-intro/.DS_Store
+session2/.DS_Store
+session2/data-access/solution/kong-plugin/.pongo/.bash_history
+session3/github-actions/.pongo/.bash_history
+.DS_Store
